Bug 352497 - laptop back light not coming back on after long period of lcd being in dpms power save mode.
Summary: laptop back light not coming back on after long period of lcd being in dpms p...
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.4.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL: https://bpaste.net/show/8c77f03bd682
Keywords:
: 351693 357621 358588 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-09 20:48 UTC by Vladi
Modified: 2017-10-27 13:47 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
how to fix (857.13 KB, image/jpeg)
2015-10-19 15:54 UTC, Matteo Croce
Details
how to fix (61.40 KB, image/jpeg)
2015-10-19 15:58 UTC, Matteo Croce
Details
login (57.00 KB, image/jpeg)
2015-10-19 15:59 UTC, Matteo Croce
Details
emerge --info (7.30 KB, text/plain)
2015-11-20 01:37 UTC, Vladi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladi 2015-09-09 20:48:38 UTC
I have to use xbacklight -inc 100 to turn my backlight on my laptop after prolonged lcd sleep.

Reproducible: Sometimes

Steps to Reproduce:
1. let kde go to power save mode
2. wake up using mouse
3. no backlight

Actual Results:  
no backlight for my laptop screen

Expected Results:  
backlight for my laptop screen

if I have a monitor pluged in it does come on just not my laptop screen.
Comment 1 Matteo Croce 2015-10-19 15:53:35 UTC
Happens to me too, VERY annoying
Comment 2 Matteo Croce 2015-10-19 15:54:46 UTC
Created attachment 95043 [details]
how to fix

This is how I have to enable the backlight again every time, using a torch
Comment 3 Matteo Croce 2015-10-19 15:58:52 UTC
Created attachment 95044 [details]
how to fix
Comment 4 Matteo Croce 2015-10-19 15:59:40 UTC
Created attachment 95045 [details]
login

SDDM is active, I can login by typing blindly
Comment 5 Vladi 2015-11-20 01:36:11 UTC
do you have a intel video card? What kernel?
Comment 6 Vladi 2015-11-20 01:37:38 UTC
Created attachment 95609 [details]
emerge --info
Comment 7 Vladi 2015-11-22 04:57:56 UTC
one more data point, seems that when I plug / unplug my charger cable it fixes the problem and the back light comes back on!
Comment 8 Matteo Croce 2016-07-18 13:11:25 UTC
yes, power plug / unplug actually works
Comment 9 Hazel Victoria Campbell 2017-06-18 01:46:13 UTC
This has been happening to me across debian 8 and now 9. Powerdevil 5.8.4
Comment 10 Nate Graham 2017-10-27 13:15:01 UTC
*** Bug 351693 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2017-10-27 13:15:32 UTC
*** Bug 358588 has been marked as a duplicate of this bug. ***
Comment 12 Nate Graham 2017-10-27 13:16:12 UTC
*** Bug 357621 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2017-10-27 13:47:24 UTC
Git commit 692bb264a81217c00d7f9ee54502bcd243b715d5 by Nathaniel Graham, on behalf of Алексей Шилин.
Committed on 27/10/2017 at 13:47.
Pushed by ngraham into branch 'master'.

Fix brightness not restoring when an inhibition is active

Summary:

An active inhibition with ChangeScreenSettings policy won't
allow to restore dimmed screen brightness normally. In this
case the user will be left with a barely visible screen,
requiring him/her to manually adjust the brightness back to
normal.

This commit enforces dimmed screen brightness restoration
even if ChangeScreenSettings policy is unavailable.

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: ngraham, broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D8502

M  +6    -3    daemon/actions/bundled/dimdisplay.cpp
M  +1    -1    daemon/actions/bundled/dimdisplay.h

https://commits.kde.org/powerdevil/692bb264a81217c00d7f9ee54502bcd243b715d5