Fix brightness not restoring when an inhibition is active

Summary:
BUG: 352497

An active inhibition with ChangeScreenSettings policy won't
allow to restore dimmed screen brightness normally. In this
case the user will be left with a barely visible screen,
requiring him/her to manually adjust the brightness back to
normal.

This commit enforces dimmed screen brightness restoration
even if ChangeScreenSettings policy is unavailable.

Reviewers: #plasma, broulik

Reviewed By: #plasma, broulik

Subscribers: ngraham, broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D8502